<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MovieDetailActivity"
    android:clipToPadding="false"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25">

                    <TextView
                        android:id="@+id/tv_movie_poster_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_poster"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.02">

                    <TextView
                        android:id="@+id/tv_movie_poster_colon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.73">

                    <ImageView
                        android:id="@+id/imgView_movie_poster_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25">

                    <TextView
                        android:id="@+id/tv_movie_name_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_name"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.02">

                    <TextView
                        android:id="@+id/tv_movie_name_colon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.73">

                    <TextView
                        android:id="@+id/tv_movie_name_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="14dp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25">

                    <TextView
                        android:id="@+id/tv_movie_director_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_director"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.02">

                    <TextView
                        android:id="@+id/tv_movie_director_colon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.73">

                    <TextView
                        android:id="@+id/tv_movie_director_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="14dp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25">

                    <TextView
                        android:id="@+id/tv_movie_synopsis_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_synopsis"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.02">

                    <TextView
                        android:id="@+id/tv_movie_synopsis_colon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.73">

                    <TextView
                        android:id="@+id/tv_movie_synopsis_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="14dp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25">

                    <TextView
                        android:id="@+id/tv_prod_house_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_prod_house"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.02">

                    <TextView
                        android:id="@+id/tv_prod_house_colon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.73">

                    <TextView
                        android:id="@+id/tv_prod_house_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="14dp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25">

                    <TextView
                        android:id="@+id/tv_year_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_year"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.02">

                    <TextView
                        android:id="@+id/tv_year_colon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="14dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.73">

                    <TextView
                        android:id="@+id/tv_year_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="14dp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>